# anom_int_2024

./: README.md  pyproject.toml
src/anom_int_2024/: __init__.py
src/anom_int_2024/analysis/: __init__.py  __main__.py  ana_db.py  ana_experiments.py  ana_plots.py  ana_stats_tools.py  window_analysis.py
src/anom_int_2024/experiments/: __init__.py  __main__.py  exp_1.py  exp_2.py  exp_3.py  exp_4.py  exp_base.py  exp_parameters.py  experiment_manager.py  experiment_manager_db.py  rava_app_anom_int.py  rava_subapp_experiments.py  rava_subapp_groups.py  rava_subapp_results.py  window_feedback_circle.py  window_feedback_star.py  window_session.py
src/anom_int_2024/simulations/: __init__.py  __main__.py  feedback_dummy.py  rava_subapp_simulations.py  rava_subapp_simulations_fast.py  rng_from_file.py
